@@ -18,6 +18,7 @@ Version 0.9.0~dev
 	* Add audio_min_streams option to toolbox2-transcode.
 	* Use _get_audio_layout_mapping in mux_mov method in ffmpeg worker.
 	* Do not force audio layout in mux_(flv|mp4|mpegps|mxf) methods in ffmpeg worker.
+	* Add audio_channels_per_stream option to transcode action.
 
 Version 0.8.1 Released on 2013/01/16
 
